--- a/privacy.html
+++ b/privacy.html
@@ -89,9 +89,10 @@
 
   <!-- Navigation Bar -->
   <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="contact.html">Contact</a>
-    <a href="privacy.html">Privacy Policy</a>
+<a href="/dddevelopments/index.html">Home</a>
+<a href="/dddevelopments/contact.html">Contact</a>
+<a href="/dddevelopments/privacy.html">Privacy Policy</a>
+<a href="/dddevelopments/terms.html">Terms of Use</a>
   </div>
 
   <div class="section">
