--- a/terms.html
+++ b/terms.html
@@ -83,10 +83,10 @@
 
 <!-- Navbar -->
 <div class="navbar">
-  <a href="index.html">Home</a>
-  <a href="contact.html">Contact</a>
-  <a href="privacy.html">Privacy Policy</a>
-  <a href="terms.html">Terms of Use</a>
+  <a href="/dddevelopments/index.html">Home</a>
+  <a href="/dddevelopments/contact.html">Contact</a>
+  <a href="/dddevelopments/privacy.html">Privacy Policy</a>
+  <a href="/dddevelopments/terms.html">Terms of Use</a>
 </div>
 
 <!-- Header -->
