--- a/terms.html
+++ b/terms.html
@@ -110,5 +110,17 @@
   <p>We recommend that you print a copy of these Legal Terms for your records.</p>
 </div>
 
+  <script>
+  // מאפסים התנהגות של פתיחה בטאב חדש
+  document.querySelectorAll('a[href]').forEach(link => {
+    link.addEventListener('click', function(e) {
+      if (e.ctrlKey || e.metaKey || e.button === 1) {
+        e.preventDefault();
+        window.location.href = this.getAttribute('href');
+      }
+    });
+  });
+</script>
+
 </body>
 </html>
