--- a/privacy.html
+++ b/privacy.html
@@ -138,6 +138,17 @@
     <p>Email: info@dddevelopments.com<br/>
        Phone: 216-706-9367</p>
   </div>
+<script>
+  // מאפסים התנהגות של פתיחה בטאב חדש
+  document.querySelectorAll('a[href]').forEach(link => {
+    link.addEventListener('click', function(e) {
+      if (e.ctrlKey || e.metaKey || e.button === 1) {
+        e.preventDefault();
+        window.location.href = this.getAttribute('href');
+      }
+    });
+  });
+</script>
 
 </body>
 </html>
