--- a/terms.html
+++ b/terms.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Terms of Use | D&D Developments LLC</title>
-  <link rel="canonical" href="https://www.dddevelopments.com/" />
+  <link rel="canonical" href="https://www.dddevelopments.com/">
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -64,7 +64,7 @@
       box-shadow: 0 10px 25px rgba(0,0,0,0.3);
     }
 
-    h1, h2 {
+    h1 {
       text-align: center;
       margin-bottom: 30px;
     }
@@ -91,20 +91,21 @@
 
 <!-- Header -->
 <div class="header">
-  <img src="logo.jpg" alt="D&D Developments Logo" class="logo-image" />
+  <img src="logo.jpg" alt="D&D Developments Logo" class="logo-image">
   <h1>Terms of Use</h1>
 </div>
 
 <!-- Main Content -->
 <div class="container">
   <h2>Agreement to Our Legal Terms</h2>
+
   <p>We are <strong>D&D Developments LLC</strong> ("Company," "we," "us," "our"), a company registered in Ohio, United States, with our headquarters located at 610 W 42nd St, New York, NY 10036, USA.</p>
 
   <p>We operate the website <a href="https://www.dddevelopments.com">https://www.dddevelopments.com</a> (the "Site"), as well as any other related products and services that refer or link to these legal terms (the "Legal Terms") (collectively, the "Services").</p>
 
   <p>You can contact us by phone at <strong>216-706-9367</strong>, email at <strong>info@dddevelopments.com</strong>, or by mail to <strong>610 W 42nd St, New York, NY 10036, USA</strong>.</p>
 
-  <p>These Legal Terms constitute a legally binding agreement made between you, whether personally or on behalf of an entity ("you"), and D&D Developments LLC, concerning your access to and use of the Services.</p>
+  <p>These Legal Terms constitute a legally binding agreement made between you, whether personally or on behalf of an entity ("you"), and D&D Developments LLC, concerning your access to and use of the Services...</p>
 
   <p>We recommend that you print a copy of these Legal Terms for your records.</p>
 </div>
