--- a/terms.html
+++ b/terms.html
@@ -64,7 +64,7 @@
       box-shadow: 0 10px 25px rgba(0,0,0,0.3);
     }
 
-    h1 {
+    h1, h2 {
       text-align: center;
       margin-bottom: 30px;
     }
@@ -76,6 +76,21 @@
 
     a {
       color: #007bff;
+    }
+
+    @media (max-width: 768px) {
+      .navbar {
+        flex-direction: column;
+        gap: 20px;
+      }
+      .logo-image {
+        width: 180px;
+        height: 180px;
+      }
+      .container {
+        padding: 20px;
+        margin: 20px;
+      }
     }
   </style>
 </head>
