--- a/terms.html
+++ b/terms.html
@@ -78,6 +78,21 @@
       color: #007bff;
     }
 
+    .footer {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .footer a {
+      display: inline-block;
+      padding: 10px 20px;
+      background-color: #444;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      font-size: 14px;
+    }
+
     @media (max-width: 768px) {
       .navbar {
         flex-direction: column;
@@ -123,6 +138,11 @@
   <p>These Legal Terms constitute a legally binding agreement made between you, whether personally or on behalf of an entity ("you"), and D&D Developments LLC, concerning your access to and use of the Services...</p>
 
   <p>We recommend that you print a copy of these Legal Terms for your records.</p>
+</div>
+
+<!-- Footer -->
+<div class="footer">
+  <a href="/dddevelopments/privacy.html">View Privacy Policy</a>
 </div>
 
 </body>
